# nginx-proxy-example

./: README.md  compose.yaml
api/: Dockerfile  README.md  pyproject.toml
api/src/example/: api.py
proxy/: Dockerfile  README.md  nginx.conf
ui/: Dockerfile  README.md  package-lock.json  package.json
ui/src/: App.tsx
